Updates CSS styles, Fixed some spacing problems

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ html {
   overflow-x: hidden;
 }
 
+#accenture-dark {
+  color: #a100ff;
+}
+
 /* Navbar */
 
 .sidebar {
@@ -82,6 +86,7 @@ html {
 .hero-section {
   background-color: black;
   position: relative;
+  font-family: "Crete Round", serif;
 }
 
 .overlay {
@@ -141,18 +146,21 @@ html {
 .journey-section {
   background-color: rgb(15, 15, 15);
   font-family: "Crete Round", serif;
-  color: #aa54df;
-  height: 190vh;
+  color: white;
+  height: 180vh;
   width: 100vw;
   margin: 0px 0px 0px 0px;
   padding: 50px 0px 0px 300px;
+  border-top: solid #4e007f 10px;
+  border-bottom: solid #4e007f 10px;
   border-radius: 500px 0px 500px 0px;
 }
 
-.journeyOne {
+.journey-one {
   height: 80%;
-  width: 70%;
+  width: 75%;
   margin: 50px 0px 50px 0px;
+  padding: 0px 0px 0px 0px;
   border: solid 4px #4e007f;
   border-radius: 90px 0px 0px 0px;
 }
@@ -200,11 +208,10 @@ html {
 .friends-section {
   font-family: "Crete Round", serif;
   color: #000000;
-  height: 110vh;
+  height: 130vh;
   width: 100vw;
-  margin: 70px 50px 50px 50px;
-  padding: 50px 0px 0px 300px;
-  /* border-top: solid #4e007f 5px; */
+  margin: 0px 0px 0px 0px;
+  padding: 50px 100px 0px 300px;
 }
 
 .friendsOne {
@@ -215,27 +222,25 @@ html {
   border-radius: 25px 25px 25px 25px;
 }
 
-.friends-title {
-  margin: -40px 0px 0px -30px;
-}
-
 /* Second Home Section */
 
 .secondhome-section {
   background-color: rgb(15, 15, 15);
   font-family: "Crete Round", serif;
   color: #aa54df;
-  height: 210vh;
+  height: 220vh;
   width: 100vw;
   margin: 0px 0px 0px 0px;
   padding: 50px 0px 0px 300px;
+  border-top: solid #4e007f 10px;
+  border-bottom: solid #4e007f 10px;
   border-radius: 500px 0px 500px 0px;
 }
 
 .family-three {
   height: 80%;
   width: 130%;
-  margin: 50px 0px 0px -40px;
+  margin: 90px 0px 0px -40px;
   border: solid 4px #4e007f;
   border-radius: 25px 25px 25px 0px;
 }
@@ -243,8 +248,8 @@ html {
 .familythree-caption {
   color: white;
   border-radius: 20px 20px 20px 20px;
-  margin: 50px 0px 0px 60px;
-  padding: 70px 0px 0px 20px;
+  margin: 90px 0px -50px 90px;
+  padding: 100px 0px 0px 20px;
   line-height: 30px;
   border-left: solid #4e007f;
 }
@@ -252,7 +257,7 @@ html {
 .family-One {
   height: 70%;
   width: 100%;
-  margin: 40px 0px 0px 50px;
+  margin: 80px 0px 0px 50px;
   border: solid 4px #4e007f;
   border-radius: 25px 25px 0px 25px;
 }
@@ -261,15 +266,15 @@ html {
   color: white;
   border-radius: 20px 20px 20px 20px;
   margin: 0px 0px 0px -40px;
-  padding: 90px 0px 0px 20px;
+  padding: 150px 0px 0px 20px;
   line-height: 30px;
   border-right: solid #4e007f;
 }
 
 .family-two {
   height: 90%;
-  width: 130%;
-  margin: 20px 0px 0px -40px;
+  width: 120%;
+  margin: 20px 0px 0px 0px;
   border: solid 4px #4e007f;
   border-radius: 25px 25px 25px 0px;
 }
@@ -278,7 +283,7 @@ html {
   color: white;
   border-radius: 20px 20px 20px 20px;
   margin: 0px 0px 0px 60px;
-  padding: 50px 0px 50px 20px;
+  padding: 0px 0px 50px 20px;
   line-height: 30px;
   border-left: solid #4e007f;
 }
@@ -289,23 +294,22 @@ html {
   font-family: "Crete Round", serif;
   background-color: #ffffff;
   color: #000000;
-  height: 150vh;
+  height: 130vh;
   width: 100vw;
   margin: 0px 0px 0px 0px;
   padding: 50px 0px 0px 300px;
 }
 
 .myteam-photo {
-  height: 90%;
-  width: 80%;
-  margin: 20px 0px 0px 50px;
+  height: 85%;
+  width: 60%;
+  margin: 20px 0px 0px 200px;
   border: solid 4px #000000;
   border-radius: 50px 50px 50px 50px;
 }
 
 .my-team-section {
   border-left: solid #4e007f 5px;
-  /* border-radius: 20px 20px 20px 20px; */
   margin: 0px 0px 0px -20px;
 }
 
@@ -313,26 +317,27 @@ html {
 
 .party-section {
   font-family: "Crete Round", serif;
-  background-color: #ffffff;
-  color: #000000;
-  height: 150vh;
+  background-color: rgb(15, 15, 15);
+  color: white;
+  height: 130vh;
   width: 100vw;
   margin: 0px 0px 0px 0px;
   padding: 50px 0px 0px 300px;
-  border-top: solid #4e007f 5px;
+  border-top: solid #4e007f 10px;
+  border-radius: 500px 0px 0px 0px;
 }
 
 .party-one {
-  height: 80%;
-  width: 80%;
-  margin: 20px 0px 0px 30px;
+  height: 90%;
+  width: 60%;
+  margin: 20px 0px 0px 80px;
   border: solid 4px #4e007f;
   border-radius: 25px 25px 25px 25px;
 }
 
 .party-two {
-  height: 80%;
-  width: 80%;
+  height: 90%;
+  width: 60%;
   margin: 10px 0px 0px 0px;
   border: solid 4px #4e007f;
   border-radius: 25px 25px 25px 25px;
@@ -344,7 +349,7 @@ html {
 }
 
 .partytwo-caption {
-  padding: 40px 30px 0px 0px;
+  padding: 80px 0px 0px 0px;
   /* border-right: solid #4e007f 5px; */
 }
 
@@ -357,7 +362,7 @@ html {
   width: 100vw;
   margin: 0px 0px 0px 0px;
   padding: 50px 0px 0px 300px;
-  border-radius: 500px 0px 0px 0px;
+  /* border-radius: 500px 0px 0px 0px; */
 }
 
 .continue-quote {
